moved namespace panel title to namespace bar chart; fixed scrollbar styles

--- a/pkg/ui/src/components/dashboard/NamespaceBarChart.scss
+++ b/pkg/ui/src/components/dashboard/NamespaceBarChart.scss
@@ -157,3 +157,21 @@ $le-100: rgb(6, 65, 168);
     margin-left: -9px;
   }
 }
+
+.namespace-panel {
+  &> .title {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    padding-right: 15px;
+    padding-left: 15px;
+    color: rgb(120, 120, 120);
+    font-size: 18px;
+    font-weight: 600;
+    padding-top: 5px;
+    height: 30px;
+    background-color: rgb(33,33,33);
+  }
+}
+  
